--- a/src/personal/templates/personal/wallet.html
+++ b/src/personal/templates/personal/wallet.html
@@ -12,13 +12,9 @@
     .btn{
         border-radius: 20px;
         border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px black;
+        -webkit-text-stroke: .2px rgb(254, 254, 254)
     }
-    .btn:hover{
-        color: black;
-        background-color: white;
-        border: 2px solid #000000;
-    }
+   
     .login-form{
         margin-left: 0;
         border-radius: 15px;
@@ -37,7 +33,7 @@
         margin-left: 12px;
     }
     .col-sm-3 p{
-        color: black;
+        color: white;
         text-shadow: none;
     }
 </style>
