--- a/src/static/css/betlock.css
+++ b/src/static/css/betlock.css
@@ -1,93 +1,56 @@
 .navbar div{
     padding: 0;
     margin: 0;
+    background-color: #fd5001;
 }
+
 .navbar a{
     color: white;
-    padding: 12px;
-    font-size: 18px;
+    font-size: 15px;
     margin: 0;
 }
 .navbar a:hover{
-    background-color: black;
     color: blue;
     -webkit-text-stroke: .2px rgb(183, 200, 0);
+}
+.nav-item{
+    padding-right: 24px;
 }
 .content{
     margin: 0px;
     padding: 0px;
     min-height: 91vh;
-    background: gainsboro;
-}
-.content-background{
-    background-image: url("/static/img/bg.png");
+    color: white;
+    background-image: url("/static/img/BG.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100vh;
     background-attachment: fixed;
 }
-.col{
-    padding: 16px;
-}
-.white-text{
-    color: white;
+.white-shadow{
     text-shadow: 1px 1px 2px black,
                      0 0 1em gainsboro,
                      0 0 0.2em gainsboro;;
 }
-.white-background{
-    background-color: white;
-}
 .gray-background{
     background-color: rgb(72, 71, 71);
 }
-.login-form{
-    margin-left: 30%;
-    border: 7px solid #ffffff;
-    border-radius: 20px;
-    width: 500px;
-    height: 300px;
-    background: transparent;
-    backdrop-filter: blur(5px);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, 
-                rgba(0, 0, 0, 0.12) 0px -12px 30px, 
-                rgba(0, 0, 0, 0.12) 0px 4px 6px, 
-                rgba(0, 0, 0, 0.17) 0px 12px 13px, 
-                rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-.login-form input{
-    border-radius: 7px;
-}
-.login-form a{
-    color: #eff1f5;
-    text-decoration: none;
-}
-.note-form{
+.note-form {
     margin: 0;
-    border: 7px solid #fff;
+    border: 1px solid #fff;
     border-radius: 20px;
-    width: 300px;
-    height: 150px;
+    width: 100%;
+    height: 411px;
     background: transparent;
     backdrop-filter: blur(5px);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, 
-                rgba(0, 0, 0, 0.12) 0px -12px 30px, 
-                rgba(0, 0, 0, 0.12) 0px 4px 6px, 
-                rgba(0, 0, 0, 0.17) 0px 12px 13px, 
-                rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .signup-form{
-    margin: 0 0 0 40.25%;
-    border: 7px solid #fff;
+    margin-left: 10%;
+    border: 1px solid #bfbfbf;
     border-radius: 20px;
-    width: 500px;
-    height: 400px;
+    width: 80%;
+    height: 500px;
     background: transparent;
     backdrop-filter: blur(5px);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, 
-                rgba(0, 0, 0, 0.12) 0px -12px 30px, 
-                rgba(0, 0, 0, 0.12) 0px 4px 6px, 
-                rgba(0, 0, 0, 0.17) 0px 12px 13px, 
-                rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .signup-form input{
     border-radius: 7px;
@@ -124,7 +87,7 @@
 .carousel-caption{
     padding: 0;
 }
-.carousel-caption p, .carousel-caption a, h1{
+.carousel-caption p, .carousel-caption a{
     text-shadow: 1px 1px 2px black,
                  0 0 1em gainsboro,
                  0 0 0.2em gainsboro;;
