--- a/src/personal/templates/personal/deposit.html
+++ b/src/personal/templates/personal/deposit.html
@@ -3,6 +3,7 @@
 {% block content %}
 <style>
     .content h2{
+        color: white;
         text-shadow: 1px 1px 2px black,
                      0 0 1em gainsboro,
                      0 0 0.2em gainsboro;;
@@ -28,12 +29,7 @@
     .btn{
         border-radius: 20px;
         border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px black;
-    }
-    .btn:hover{
-        color: black;
-        background-color: white;
-        border: 2px solid #000000;
+        -webkit-text-stroke: .2px white;
     }
     .row{
         padding-bottom: 16px;
@@ -48,6 +44,7 @@
     .submit{
         margin-left: 130px;
     }
+    
 </style>
 <div class="container-fluid content">
     <div class="container">
