--- a/src/personal/templates/personal/login.html
+++ b/src/personal/templates/personal/login.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col">
                     <input type="submit" id="submit" value="Login">
-                    <label class="error">{{ str }}</label>
+                    <p class="error">{{ str }}</p>
                 </div>
             </div>
             <div class="row">
