--- a/src/personal/templates/personal/wallet.html
+++ b/src/personal/templates/personal/wallet.html
@@ -6,7 +6,7 @@
         display: inline;
     }
     .content a{
-        color: black;
+        color: #efe8e8;
         display: inline;
     }
     .btn{
