--- a/src/personal/templates/personal/send.html
+++ b/src/personal/templates/personal/send.html
@@ -31,12 +31,7 @@
     .btn{
         border-radius: 20px;
         border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px black;
-    }
-    .btn:hover{
-        color: black;
-        background-color: white;
-        border: 2px solid #000000;
+        -webkit-text-stroke: .2px white;
     }
     .spacing{
         padding-bottom: 16px;
@@ -51,6 +46,8 @@
     .submit{
         margin-left: 130px;
     }
+    
+
 </style>
 <div class="container-fluid content">
     <div class="container">
