--- a/src/personal/templates/personal/withdraw.html
+++ b/src/personal/templates/personal/withdraw.html
@@ -28,12 +28,7 @@
     .btn{
         border-radius: 20px;
         border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px black;
-    }
-    .btn:hover{
-        color: black;
-        background-color: white;
-        border: 2px solid #000000;
+        -webkit-text-stroke: .2px white;
     }
     .row{
         padding-bottom: 16px;
@@ -48,6 +43,7 @@
     .submit{
         margin-left: 130px;
     }
+    
 </style>
 <div class="container-fluid content">
     <div class="container">
