--- a/src/personal/templates/personal/login.html
+++ b/src/personal/templates/personal/login.html
@@ -42,7 +42,7 @@
                 <img src="/static/img/avatar.jpg" height="120px" width="120px">
             </div>
         </div>                         
-        <form id="login" method="post" action="/login">
+        <form id="login" method="post" action="/">
             {% csrf_token %}    
             <div class="row">
                 <div class="col">
