--- a/src/personal/templates/personal/signup.html
+++ b/src/personal/templates/personal/signup.html
@@ -132,7 +132,7 @@
                     <div class="row">
                         <div class="col-sm-2"></div>
                         <div class="col-sm-6">
-                            <a href="/login">Already have an account?</a>
+                            <a href="/">Already have an account?</a>
                         </div>
                     </div>
                 </form>
