--- a/src/personal/templates/personal/wallet.html
+++ b/src/personal/templates/personal/wallet.html
@@ -6,77 +6,59 @@
         display: inline;
     }
     .content a{
-        color: #efe8e8;
-        display: inline;
-    }
-    .btn{
-        border-radius: 20px;
-        border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px rgb(254, 254, 254)
-    }
-    .login-form{
-        margin-left: 0;
-        border-radius: 15px;
-        height: 280px;
-    }
-    hr{
-        height: 10px;
-        border: 0;
-        box-shadow: 0 10px 10px -10px black inset;
-        margin: 0;
+        color: black;
     }
     .row{
         padding-bottom: 16px;
     }
-    .title{
-        margin-left: 12px;
+    .border{
+        width: 600px;
+        height: 300px;
+        padding: 30px;
     }
 </style>
 <div class="container-fluid content">
     <div class="container">
         <br>
-        <br>
-        <div class="login-form">
-            <h2 class="title white-text">My Wallet</h2>
-            <hr>
+        <div class="border">
+            <h2 class="white-text">My Wallet</h2>
             <div class="row">
-                <div class="col-sm-3 text-end">
+                <div class="col-sm-2 text-end">
                     <p>User ID: </p>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-sm-10">
                     <p class="white-text">{{ request.user.id }}</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 text-end">
+                <div class="col-sm-2 text-end">
                     <p>Username: </p>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-sm-10">
                     <p class="white-text">{{ request.user.username }}</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 text-end">
+                <div class="col-sm-2 text-end">
                     <p>Credits: </p>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-sm-10">
                     <p class="white-text">{{ request.user.wallet }}</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 text-end">
+                <div class="col-sm-2 text-end">
                     <p>On hold: </p>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-sm-10">
                     <p class="white-text">{{ request.user.on_hold }}</p>
                 </div>
             </div>
-            <hr>
             <div class="container">
-                <a class="btn" href="/withdraw">Withdraw</a>
+                <a class="btn btn-secondary" href="/withdraw">Withdraw</a>
                 {% if not request.user.is_organizer %}
-                <a class="btn title" href="/deposit" >Deposit</a>
-                <a class="btn title" href="/send">Send</a>
+                <a class="btn btn-secondary" href="/deposit" >Deposit</a>
+                <a class="btn btn-secondary" href="/send">Send</a>
                 {% endif %} 
             </div>
         </div>    
