--- a/src/static/css/betlock.css
+++ b/src/static/css/betlock.css
@@ -3,7 +3,9 @@
     margin: 0;
     background-color: #fd5001;
 }
-
+.navbar .link{
+    margin-top: 4px;
+}
 .navbar a{
     color: white;
     font-size: 15px;
@@ -12,6 +14,9 @@
 .navbar a:hover{
     color: blue;
     -webkit-text-stroke: .2px rgb(183, 200, 0);
+}
+.navbar-nav{
+    padding: 4px 0;
 }
 .nav-item{
     padding-right: 24px;
@@ -34,23 +39,30 @@
 .gray-background{
     background-color: rgb(72, 71, 71);
 }
-.note-form {
-    margin: 0;
-    border: 1px solid #fff;
+.border{
+    border: 1px solid #fd5001;
     border-radius: 20px;
-    width: 100%;
-    height: 411px;
     background: transparent;
     backdrop-filter: blur(5px);
+    box-shadow: rgba(255, 105, 65, 0.25) 0px 54px 55px, 
+                rgba(255, 105, 65, 0.12) 0px -12px 30px, 
+                rgba(255, 105, 65, 0.12) 0px 4px 6px, 
+                rgba(255, 105, 65, 0.17) 0px 12px 13px, 
+                rgba(255, 105, 65, 0.09) 0px -3px 5px;
 }
 .signup-form{
     margin-left: 10%;
-    border: 1px solid #bfbfbf;
+    border: 1px solid #fd5001;
     border-radius: 20px;
     width: 80%;
     height: 500px;
     background: transparent;
     backdrop-filter: blur(5px);
+    box-shadow: rgba(255, 105, 65, 0.25) 0px 54px 55px, 
+                rgba(255, 105, 65, 0.12) 0px -12px 30px, 
+                rgba(255, 105, 65, 0.12) 0px 4px 6px, 
+                rgba(255, 105, 65, 0.17) 0px 12px 13px, 
+                rgba(255, 105, 65, 0.09) 0px -3px 5px;
 }
 .signup-form input{
     border-radius: 7px;
@@ -61,28 +73,20 @@
 }
 .forgot-form{
     margin-left: 30%;
-    border: 7px solid #fff;
+    border: 1px solid #fd5001;
     border-radius: 20px;
     width: 500px;
     height: 220px;
     background: transparent;
     backdrop-filter: blur(5px);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, 
-                rgba(0, 0, 0, 0.12) 0px -12px 30px, 
-                rgba(0, 0, 0, 0.12) 0px 4px 6px, 
-                rgba(0, 0, 0, 0.17) 0px 12px 13px, 
-                rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(255, 105, 65, 0.25) 0px 54px 55px, 
+                rgba(255, 105, 65, 0.12) 0px -12px 30px, 
+                rgba(255, 105, 65, 0.12) 0px 4px 6px, 
+                rgba(255, 105, 65, 0.17) 0px 12px 13px, 
+                rgba(255, 105, 65, 0.09) 0px -3px 5px;
 }
 .forgot-form input{
     border-radius: 7px;
-}
-.profile-design a:hover{
-    background-color: white;
-    color: rgb(0, 105, 253);
-    font-weight: bold;
-}
-.profile-head a:hover{
-    font-weight: bold;
 }
 .carousel-caption{
     padding: 0;
@@ -118,4 +122,7 @@ hr{
 }
 .text-white{
     color: white;
+}
+#submit{
+    background-color: gray;
 }
