--- a/src/personal/templates/personal/signup.html
+++ b/src/personal/templates/personal/signup.html
@@ -106,18 +106,7 @@
                             <label>Date of birth:</label>
                         </div>
                         <div class="col-sm-3">
-                            <input type="date" required>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-2 text-end">
-                            <label for="type">Account Type:</label>
-                        </div>
-                        <div class="col-sm-10">
-                            <input type="radio" id="bettor" class="type" name="type" value="bettor" checked>
-                            <label for="bettor">Bettor</label>        
-                            <input type="radio" id="organizer" class="type" name="type" value="organizer">
-                            <label for="organizer">Organizer</label>
+                            <input type="text" placeholder="Birth Date" id="birthdate" name="birthdate">        
                         </div>
                     </div>
                     <div class="row">
